# cp-problem-maker

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
cp_problem_maker/: compile.py  config.py  judge.py  main.py  problem.py  testcase.py
cp_problem_maker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
cp_problem_maker/subcommand/: check.py  gen_case.py  gen_params.py  init.py  test.py
cp_problem_maker/util/: pathlib_util.py
example/: .gitignore
example/sample-problem/: problem.toml
example/sample-problem-interactive/: problem.toml
example/sample-problem-interactive/.cp_problem_maker/: config.toml
example/sample-problem-interactive/src/: checker.cpp  params.h  verifier.cpp
example/sample-problem/.cp_problem_maker/: config.toml
example/sample-problem/src/: checker_testlib_style.cpp  checker_yukicoder_style.cpp  params.py  verifier.py
sample/: compile_info.toml  info.toml  task.md  verifier.cpp
sample/in/: 02_random_00.in  02_random_01.in  02_random_02.in  02_random_03.in  02_random_04.in  03_random_00.in  03_random_01.in
sample/include/: params.hpp  testcase.hpp
sample/sol/: correct.cpp  re.cpp  tle.cpp  wa.cpp
src/cp_problem_maker/: anchor.py  main.py
src/cp_problem_maker/config/: problem_config.py  tool_config.py
src/cp_problem_maker/data/: default_config.toml  problem.toml
template/: compile_info.toml  info.toml
tests/: conftest.py
tests/config/: test_tool_config.py
tests/helpers/: compile.py  files.py
tests/subcommands/: test_config.py
tests/utils/: test_path.py
(+35 files in other folders)
